name:          dtree
category:      dtree
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Ben Gamari
maintainer:    Ben Gamari <bgamari@gmail.com>
stability:     experimental
homepage:      http://github.com/bgamari/dtree
bug-reports:   http://github.com/bgamari/dtree/issues
copyright:     Copyright (C) 2013 Ben Gamari
synopsis:      On-disk trees
--description:   foo
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  CHANGELOG.markdown
  HLint.hs
  README.markdown
  travis/cabal-apt-install
  travis/config

source-repository head
  type: git
  location: git://github.com/bgamari/dtree.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  exposed-modules:     Data.DIntMap
                       Data.DiskStore
  ghc-options: -Wall
  build-depends:
    base >= 4.4 && < 5,
    directory,
    containers >= 0.5,
    bytestring,
    binary,
    hashable

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
    base,
    directory >= 1.0,
    doctest >= 0.9.1,
    filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
